# zotero-arxiv-daily

./: .gitignore  README.md  llm.py  paper.py  pyproject.toml
.github/: keep-alive.txt
.github/workflows/: ci.yml  keep-alive.yml  main.yml
config/: base.yaml  custom.yaml  default.yaml  public.yaml
src/zotero_arxiv_daily/: construct_email.py  executor.py  llm.py  main.py  protocol.py  utils.py
src/zotero_arxiv_daily/reranker/: local.py
src/zotero_arxiv_daily/retriever/: __init__.py  arxiv_retriever.py  base.py
tests/: conftest.py  paper.pkl  paper_full.pkl  test_email.py  test_llm.py
tests/retriever/: arxiv_rss_example.xml  test_arxiv_retriever.py
tests/utils/: launch_local_smtpd.py
